Have the icon applet explicitly tell the icon widget that a clicked() signal isn't wanted after a mouse move rather than the widget assuming so. This means that icon applets that can't be dragged act like regular buttons again.

Ok to commit this to 4.0 as well?

BUG: 155531

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=760441