widgets/icon_p.h
@@ -98,7 +98,6 @@ public:
         HoverState = 1,
         PressedState = 2,
         ManualPressedState = 4,
-        MovedState = 8
     };
     Q_DECLARE_FLAGS(IconStates, IconState)
 
